Dependencies are added

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.javax.mail-1.6.2.jar=C:\\Users\\Ivan&Leila\\.m2\\repository\\com\\sun\\mail\\javax.mail\\1.6.2\\javax.mail-1.6.2.jar
 file.reference.javax.mail.jar=Z:\\Leila\\Schooling\\NetBeans Projects\\javax.mail.jar
 file.reference.mariadb-java-client-3.0.3.jar=src/java/database/mariadb-java-client-3.0.3.jar
 includes=**
@@ -43,7 +44,8 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${file.reference.mariadb-java-client-3.0.3.jar}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -86,6 +88,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=ForgottenPasswordLab9.war
+war.name=ForgotPasswordLab9.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
